--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -2,19 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Templates="clr-namespace:discrete_machine_app.Templates" x:Class="discrete_machine_app.MainWindow"
-        Title="MainWindow" Height="350" Width="789.179">
+        Title="MainWindow" Height="579.325" Width="1038.179">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="60px"/>
         </Grid.RowDefinitions>
+        <Menu HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="614"/>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Canvas x:Name="SchemeCanvas" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Templates:ElementTemplate HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="501" Canvas.Top="43"/>
+                <Templates:ElementTemplate HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="456" Canvas.Top="44"/>
             </Canvas>
             <Canvas x:Name="CyclogramCanvas" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
