--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -13,11 +13,13 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Canvas x:Name="SchemeCanvas" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Canvas x:Name="SchemeCanvas" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="488" Width="515">
             </Canvas>
             <Canvas x:Name="CyclogramCanvas" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         </Grid>
-        <Grid Grid.Row="1"/>
+        <Grid Grid.Row="1">
+            <Label Content="Drop to canvas to add summator" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" MouseUp="Label_MouseDown" />
+        </Grid>
     </Grid>
 </Window>
