--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -22,14 +22,121 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <ScrollViewer>
-                <discrete_machine_app:CanvasAutoSize x:Name="SchemeCanvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="0" Height="0" />
+            <ScrollViewer Margin="0,46,0,0">
+                <discrete_machine_app:CanvasAutoSize x:Name="SchemeCanvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="0" Height="0">
+                    <Grid Height="225" Name="grid1" Width="499" Canvas.Left="514" Canvas.Top="19">
+                        <Grid.Background>
+                            <ImageBrush ImageSource="/discrete-machine-app;component/Images/cyclegram.png" />
+                        </Grid.Background>
+                    </Grid>
+                </discrete_machine_app:CanvasAutoSize>
             </ScrollViewer>
-            <Canvas x:Name="CyclogramCanvas" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-
+            <Menu Height="23" Name="menu1" Margin="0,0,0,457">
+                <MenuItem Header="Файл">
+                    <MenuItem.Icon>
+                        <Image Source="/discrete-machine-app;component/Images/glyphicons_156_show_thumbnails.png" Height="15" Width="15" />
+                    </MenuItem.Icon>
+                    <MenuItem Header="Сохранить">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_358_file_import.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Загрузить">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_359_file_export.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+                <MenuItem Header="Добавить">
+                    <MenuItem.Icon>
+                        <Image Source="/discrete-machine-app;component/Images/glyphicons_099_vector_path_all.png" Width="15" Height="15" />
+                    </MenuItem.Icon>
+                    <MenuItem Header="Сумматор" Click="MenuItem_Click">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_007_summator.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Конъюнктор" Click="MenuItem_Click">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_007_conjuctor.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Дизъюнктор" Click="MenuItem_Click">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_007_disjuctor.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Инвертор" Click="MenuItem_Click">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_007_invertor.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+                <MenuItem Header="Настройки">
+                    <MenuItem.Icon>
+                        <Image Source="/discrete-machine-app;component/Images/glyphicons_139_adjust_alt.png" Width="15" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Справка">
+                    <MenuItem.Icon>
+                        <Image Source="/discrete-machine-app;component/Images/glyphicons_245_chat.png" Width="15" />
+                    </MenuItem.Icon>
+                    <MenuItem Header="Что это?" />
+                    <MenuItem Header="Как это работает?" />
+                </MenuItem>
+                <MenuItem Header="О программе">
+                    <MenuItem.Icon>
+                        <Image Source="/discrete-machine-app;component/Images/glyphicons_352_nameplate.png" Width="15" />
+                    </MenuItem.Icon>
+                    <MenuItem Header="Разработчики">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_024_parents.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Обновления">
+                        <MenuItem.Icon>
+                            <Image Source="/discrete-machine-app;component/Images/glyphicons_082_roundabout.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+            <ToolBar Height="30" Name="toolBar1" Margin="200,6,180,444" Grid.Column="1">
+                <Button Width="20" Height="20">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/discrete-machine-app;component/Images/glyphicons_173_play.png" />
+                    </Button.Background>
+                </Button>
+                <Button Width="20" Height="20">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/discrete-machine-app;component/Images/glyphicons_175_stop.png" />
+                    </Button.Background>
+                </Button>
+                <Button Width="20" Height="20">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/discrete-machine-app;component/Images/glyphicons_177_fast_forward.png" />
+                    </Button.Background>
+                </Button>
+                <Button Width="20" Height="20">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/discrete-machine-app;component/Images/glyphicons_216_circle_arrow_left.png" />
+                    </Button.Background>
+                </Button>
+                <Button Width="20" Height="20">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/discrete-machine-app;component/Images/glyphicons_217_circle_arrow_right.png" />
+                    </Button.Background>
+                </Button>
+            </ToolBar>
+            <Label Content="Циклограмма" Grid.Column="1" Height="28" HorizontalAlignment="Left" Margin="200,31,0,0" Name="label1" VerticalAlignment="Top" FontSize="16" FontWeight="Black" />
+            <Grid Margin="20,57,6,-9" Grid.Column="1">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/discrete-machine-app;component/Images/cyclegram.png" />
+                </Grid.Background>
+            </Grid>
         </Grid>
-        <Grid Grid.Row="1">
-            <Label Content="Drop to canvas to add summator" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" MouseUp="Label_MouseDown" />
+        <Grid Grid.Row="1" Background="White">
+            <Label HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" MouseUp="Label_MouseDown" Content="∑" Background="#FFD1D1D1" />
+            <StatusBar Height="23" Name="statusBar1" Margin="0,37,0,0" />
         </Grid>
     </Grid>
 </Window>
