--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -3,15 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Templates="clr-namespace:discrete_machine_app.Templates" x:Class="discrete_machine_app.MainWindow"
         Title="MainWindow" Height="579.325" Width="1038.179">
+    
     <Window.Resources>
         <ControlTemplate x:Key="WireTemplate">
             <Line X1="{Binding In.X}" Y1="{Binding In.Y}" 
-                      X2="{Binding Out.X}" Y2="{Binding Out.Y}"
-                      Stroke="Red"
-                      StrokeThickness="1">
+                  X2="{Binding Out.X}" Y2="{Binding Out.Y}"
+                  Stroke="Red"
+                  StrokeThickness="1">
             </Line>
         </ControlTemplate>
     </Window.Resources>
+    
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="23px"/>
@@ -59,6 +62,9 @@
                         <Image Source="/discrete-machine-app;component/Images/glyphicons_007_invertor.png" />
                     </MenuItem.Icon>
                 </MenuItem>
+                <Separator></Separator>
+                <MenuItem Header="Регистр" Click="MenuItem_Click">
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="Настройки">
                 <MenuItem.Icon>
@@ -94,8 +100,8 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <ScrollViewer>
-                <discrete_machine_app:CanvasAutoSize x:Name="SchemeCanvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="0" Height="0">
-                </discrete_machine_app:CanvasAutoSize>
+                <Canvas x:Name="SchemeCanvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="0" Height="0">
+                </Canvas>
             </ScrollViewer>
             <Grid Grid.Column="1">
                 <Grid.Background>
