--- a/discrete-machine-app/Templates/ElementTemplate.xaml
+++ b/discrete-machine-app/Templates/ElementTemplate.xaml
@@ -57,7 +57,12 @@
         </ControlTemplate>
     </UserControl.Resources>
     <Grid>
-        <Control x:Name="MainElement"></Control>
+        <Control x:Name="MainElement" Template="{StaticResource DefaultTemplate}">
+            <Control.ContextMenu>
+                <ContextMenu>
+                </ContextMenu>
+            </Control.ContextMenu>
+        </Control>
         <ListView Name="InputPanel" ItemsSource="{Binding Input}" HorizontalAlignment="Left" VerticalAlignment="Center" ItemTemplate="{StaticResource ConnectorsPanel}" Drop="InputPanel_Drop" AllowDrop="True" />
         <ListView Name="OutputPanel" ItemsSource="{Binding Output}" HorizontalAlignment="Right" VerticalAlignment="Center" ItemTemplate="{StaticResource ConnectorsPanel}" PreviewMouseLeftButtonDown="OutputPanel_PreviewMouseLeftButtonDown" />
         <ListView Name="InternalsPanel" ItemsSource="{Binding Internals}" HorizontalAlignment="Center" VerticalAlignment="Bottom" ItemTemplate="{StaticResource ConnectorsPanel}" />
