--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -122,6 +122,10 @@
                 </Canvas>
             </ScrollViewer>
             <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30px" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
                 <Grid.Background>
                     <ImageBrush ImageSource="/discrete-machine-app;component/Images/cyclegram.png" />
                 </Grid.Background>
@@ -153,6 +157,14 @@
                         </Button>
                     </ToolBar>
                 <Label Content="Циклограмма" Grid.Column="1" Height="28" HorizontalAlignment="Center" x:Name="label1" VerticalAlignment="Top" FontSize="16" FontWeight="Black" />
+                <DataGrid x:Name="CyclogramGrid" Grid.Row="2" AutoGenerateColumns="False">
+                    <DataGrid.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Добавить столбец" Command="{Binding AddColumnCommand}" Click="MenuItem_Click_1"/>
+                            <MenuItem Header="Добавить условие" />
+                        </ContextMenu>
+                    </DataGrid.ContextMenu>
+                </DataGrid>
             </Grid>
         </Grid>
         <Grid Grid.Row="3" Background="White">
