--- a/discrete-machine-app/MainWindow.xaml
+++ b/discrete-machine-app/MainWindow.xaml
@@ -157,7 +157,7 @@
                         </Button>
                     </ToolBar>
                 <Label Content="Циклограмма" Grid.Column="1" Height="28" HorizontalAlignment="Center" x:Name="label1" VerticalAlignment="Top" FontSize="16" FontWeight="Black" />
-                <DataGrid x:Name="CyclogramGrid" Grid.Row="2" AutoGenerateColumns="False">
+                <DataGrid x:Name="CyclogramGrid" Grid.Row="2" AutoGenerateColumns="False" CanUserReorderColumns="False">
                     <DataGrid.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="Добавить столбец" Command="{Binding AddColumnCommand}" Click="MenuItem_Click_1"/>
